# file-server-axum-element-plus

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
src/: App.tsx  main.rs  main.ts
src/assets/: main.css
