[package]
name = "file_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
serde = "1.0.203"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
uuid = { version = "1.9.1", features = ["v4"] }
